<resources>
    <string name="app_name">WaterTips</string>
    <string name="title_home">Home</string>
    <string name="title_arduino">Scan Arduino</string>
    <string name="title_notifications">Settings</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="scan">Scan</string>
    <string name="settings_label_unit_type">Unit Type</string>
    <string name="settings_label_irrig_rate">Irrig Rate</string>
    <string name="settings_label_targetLF">Target LF</string>
    <string name="settings_label_runtime">Runtime</string>
    <string name="refresh">Refresh Tips</string>
    <string name="update_date">Update Date/Time</string>
</resources>